test/valid/41625_GoodCast/GoodCast.plume


class GoodCast extends Object is
	 
	method t : () -> String is 
		"blah" as String 
					