test/invalid/41625_InvalidCompare/A.plume


class A extends Object is 
	method t : () -> Boolean is 
		"viva" == true